Add TurboQuant vector quantization codec for Apache Lucene
TurboQuant is a new KnnVectorsFormat that achieves 4-30x index compression
vs Float32 by storing only quantized vectors (no raw float32 copies).

Algorithm: FWHT random rotation + Lloyd-Max polar quantization (1/2/4/8-bit).
Based on the TurboQuant paper (Zandieh et al., ICLR 2026).

Key results (100K Qwen3-8B embeddings, 128-4096d):
- TQ-1bit+rescore matches BBQ-1bit+rescore recall at 30x less storage
- TQ-8bit tracks close to Float32 recall at 4x compression
- TQ indexes 2-4x faster (less I/O, stateless quantization)
- BBQ/SQ indexes are larger than Float32 (store raw vectors for rescore)

12 source files, 36 unit tests covering:
- FWHT transform properties
- PolarQuant centroid correctness
- End-to-end index/search at all bit widths
- Invariants: higher bits >= lower bits recall, rescore >= search,
  deterministic encoding, merge preserves scores, zero vector scores zero